# synesthesia

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_backend.ps1  test_api.js  test_rotation_timing.py  test_state_switching.py
backend/api/: main.py  websocket.py  websocket_sync.py
backend/api/routes/: __init__.py  audio.py  devices.py  health.py  sessions.py  (+2 more)
backend/audio/: __init__.py  effects.py  engine.py  mixer.py  synthesizers.py
backend/core/: config.py  exceptions.py  logging.py
backend/data/: __init__.py  database.py  models.py  recorder.py
backend/eeg/: __init__.py  device_interface.py  simulator.py
backend/ml/: __init__.py  artifact_classifier.py  calibration.py  state_classifier.py
backend/music/: __init__.py  cellular_automaton.py  mappings.py  music_generator.py  scales.py
backend/pipeline/: __init__.py  realtime_pipeline.py  sync_manager.py  sync_metrics.py
backend/signal_processing/: __init__.py  buffer.py  feature_extraction.py  preprocessing.py
backend/tests/: test_audio.py  test_calibration.py  test_integration.py  test_ml.py  test_music.py  test_signal_processing.py  test_state_switching.py  test_sync.py  test_visual.py  test_websocket.html  test_websocket.py
backend/visual/: __init__.py  algorithms.py  parameter_generator.py
docs/: muse_s_athena_planOLDOUTDATED.md  openmuseguide.md  syncfeaturenotes.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
scripts/: init_db.py  start_backend.bat  test_setup.py
(+31 files in other folders)
